--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             margin: 20px;
             padding: 0;
             font-family: Radio Grotesk;
-            background-image: url(img/bkg2.jpg);
+            background-image: url(bkg2.jpg);
             color: #FFFFFF;
             background-repeat: no-repeat;
         }
