--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
                             <!--a href="licencias de uso/licencia 1.html" class="btn btn-primary" role="button" target="_blank">Licencia</a-->
                             <a href="#" class="btn btn-default producto" precio="1000.00" titulo="Software G-VENTA" role="button"><i class="icon-basket"></i> Comprar</a>
                         </p>
+			<h2>Software punto de venta Monocaja</h2>
+			<p>Realiza tus ventas de una manera más semcilla, no dejes que tus finanzas se vean afectadas por cortes de caja incompleto, adquierelo hoy mismo</p>
                     </div>
                 </div>
             </div>
