--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
 					background-color: #d13f00;
 					transition: color 0.3s ease, transform 0.3s ease;
 				}
+	h1{
+          text-align: justify;
+        }
+        p{
+          text-align: justify;
+        }
     </style>
 </head>
 
@@ -146,9 +152,11 @@
                             <!--a href="licencias de uso/licencia 1.html" class="btn btn-primary" role="button" target="_blank">Licencia</a-->
                             <a href="#" class="btn btn-default producto" precio="1000.00" titulo="Software G-VENTA" role="button"><i class="icon-basket"></i> Comprar</a>
                         </p>
-			<h2>Software punto de venta Monocaja</h2>
-			<p>Realiza tus ventas de una manera más semcilla, no dejes que tus finanzas se vean afectadas por cortes de caja incompleto, adquierelo hoy mismo</p>
-                    </div>
+			</div>
+                </div>
+		<div class="container">
+                <h2>Software punto de venta Monocaja</h2>
+                   	<p>Realiza tus ventas de una manera más sencilla, no dejes que tus finanzas se vean afectadas por cortes de caja incompleto, adquierelo hoy mismo</p>
                 </div>
             </div>
         </section>
