--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <h3 align="center">Software GVENTA</h3>
                         <p>
                             <!--a href="licencias de uso/licencia 1.html" class="btn btn-primary" role="button" target="_blank">Licencia</a-->
-                            <a href="#" class="btn btn-default producto" precio="1000.00" titulo="Software G-VENTA" role="button"><i class="icon-basket"></i> Comprar</a>
+                            <a href="#" class="btn btn-default producto" precio="1000.00" titulo="Software G-VENTA" role="button"><!--i class="icon-basket"></i--> Comprar</a>
                         </p>
 			</div>
                 </div>
